Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -18,8 +18,8 @@
    "source": [
     "### TODO\n",
     "1. Ladda in i [Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE&t=6s)\n",
-    "  1. Använder extrakt enligt nedan och sedan kopplar ihop det med Wikidata\n",
-    "1. Lägga till objekt i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
+    "  1. Använder extrakt enligt nedan och sedan kopplar ihop det med Wikidata mha verktyget [Open Refine](https://openrefine.org/)\n",
+    "1. Lägga till utegym platser i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
     "1. Se om bilder från Stockholms stad är [CC-9](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No riughts reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
     "1. Använda verktyget [Tabernacle](https://tabernacle.toolforge.org/#/) för att ange namn på Stockholms utegym på flera språk ex. de vanligaste språken i Stockholms kommun \n",
     "  1. [Nationella minoriteter](https://start.stockholm/om-stockholms-stad/sa-arbetar-staden/nationella-minoriteter/) / [Wikipedia Minoritetsspråk i Sverige](https://sv.wikipedia.org/wiki/Minoritetsspr%C3%A5k_i_Sverige) --> språk  \n",
