Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -46,7 +46,13 @@
     "  1. Bättre vore att ha datum då den upphörde och ha versionshantering av datat jmf Wikidata versioner av objektet för [Akalla Gårds utegym Q96105887](https://www.wikidata.org/w/index.php?title=Q96105887&action=history) \n",
     "1. Bilder refereras i ett dataset som är [CC-0 (Creative Commons CC Zero)](http://creativecommons.org/publicdomain/zero/1.0/) vad har bilderna för copyright? Öppen data borde försöka ha bilder med tydlig copyright --> fråga skickad på [twitter](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
     "1. För att kunna referera ett dataset som källa behövs en tydlig identifierare. Idag känns datasettet ha en väldigt otydlig [persistent idengtifierare](https://en.wikipedia.org/wiki/Persistent_identifier) för datasettet är det [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) ? den borde finnas med under '''metadata''' \n",
-    "Bra dataset som skallanvändas måste vara enkla att kommunicera med och följa öppna frågor dvs. det är inte bara att ställa ut en kasse data och hoppas det blir bra jmf [Wikidata har unika issuenummer](https://phabricator.wikimedia.org/tag/wikidata/) för alla frågor och tydlighet när saker går i produktion plus du har en [publik backlog]((https://www.youtube.com/watch?v=502ILHjX9EE)) så du förstår prioriteringar ochkan planera ditt eget arbete...."
+    "Bra dataset som skall användas måste vara enkla att kommunicera med och följa öppna frågor dvs. det är inte bara att ställa ut en kasse data och hoppas det blir bra \n",
+    " 1. jmf [Wikidata har unika issuenummer](https://phabricator.wikimedia.org/tag/wikidata/) för alla frågor och\n",
+    " 1. tydlighet när saker går i produktion \n",
+    " 1. du har en [publik backlog]((https://www.youtube.com/watch?v=502ILHjX9EE)) så du förstår prioriteringar och kan planera ditt eget arbete....\n",
+    " 1. du kan följa ärendet(personer/projekt och svara/ ställa nya frågor ex. [user salgo60](https://phabricator.wikimedia.org/p/Salgo60/) - jag / [Lydia_Pintscher](https://phabricator.wikimedia.org/p/Lydia_Pintscher/) product manager WIkidata som sitter i Berlin / |projekt för editera WD från en klient - Wikidata-Bridge](https://phabricator.wikimedia.org/project/profile/4074/) / [Change feed Phabricator](https://phabricator.wikimedia.org/feed/query/all/) / [Change feed Wikidata](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
+    " 1. du kan pinga personer med en fråga / prenumerera på ändringar  \n",
+    "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel"
    ]
   },
   {
