Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -52,7 +52,10 @@
     " 1. du har en [publik backlog]((https://www.youtube.com/watch?v=502ILHjX9EE)) så du förstår prioriteringar och kan planera ditt eget arbete....\n",
     " 1. du kan följa ärendet(personer/projekt och svara/ ställa nya frågor ex. [user salgo60](https://phabricator.wikimedia.org/p/Salgo60/) - jag / [Lydia_Pintscher](https://phabricator.wikimedia.org/p/Lydia_Pintscher/) product manager WIkidata som sitter i Berlin / |projekt för editera WD från en klient - Wikidata-Bridge](https://phabricator.wikimedia.org/project/profile/4074/) / [Change feed Phabricator](https://phabricator.wikimedia.org/feed/query/all/) / [Change feed Wikidata](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
     " 1. du kan pinga personer med en fråga / prenumerera på ändringar  \n",
-    "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel"
+    "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel \n",
+    "  1. om nu Stockholms stad uppdaterar detta dataset med bättre koordinater\n",
+    "     1. hur ser vi det? hur kan vi prenumerera på detta\n",
+    "     1. om nu Open Street map /Wikidata förbättrrar dessa koordinater hur får vimen \"dataroundtrip\" tillbaka till Stockholmsstad?"
    ]
   },
   {
