--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -43,7 +43,9 @@
    "source": [
     "## Issues \n",
     "1. [Text](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) \"Datamängden är temporär för projekt ÖDIS.\" vad innebär det? kommer den att försvinna?!?!? \n",
-    "  1. Bättre vore att ha datum då den upphörde och ha versionshantering av datat jmf Wikidata versioner av objektet för [Akalla Gårds utegym Q96105887](https://www.wikidata.org/w/index.php?title=Q96105887&action=history) \n",
+    "  1. Bättre vore att ha datum då den upphörde och ha versionshantering av datat jmf \n",
+    "     1. Wikidata versioner av objektet för [Akalla Gårds utegym Q96105887](https://www.wikidata.org/w/index.php?title=Q96105887&action=history) \n",
+    "     1. GITHUB versioner för denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/commits/7144289cde4b6e7d2e556746e2c8bb0e4882315a/Utegym%20Stockholm%20.ipynb)\n",
     "1. Bilder refereras i ett dataset som är [CC-0 (Creative Commons CC Zero)](http://creativecommons.org/publicdomain/zero/1.0/) vad har bilderna för copyright? Öppen data borde försöka ha bilder med tydlig copyright --> fråga skickad på [twitter](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
     "1. För att kunna referera ett dataset som källa behövs en tydlig identifierare. Idag känns datasettet ha en väldigt otydlig [persistent idengtifierare](https://en.wikipedia.org/wiki/Persistent_identifier) för datasettet är det [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) ? den borde finnas med under '''metadata''' \n",
     "Bra dataset som skall användas måste vara enkla att kommunicera med och följa öppna frågor dvs. det är inte bara att ställa ut en kasse data och hoppas det blir bra \n",
@@ -55,7 +57,7 @@
     "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel \n",
     "  1. om nu Stockholms stad uppdaterar detta dataset med bättre koordinater\n",
     "     1. hur ser vi det? hur kan vi prenumerera på detta\n",
-    "     1. om nu Open Street map /Wikidata förbättrrar dessa koordinater hur får vimen \"dataroundtrip\" tillbaka till Stockholmsstad?"
+    "     1. om nu Open Street map / Wikidata förbättrar dessa koordinater hur får vi en \"dataroundtrip\" tillbaka till Stockholmsstad?"
    ]
   },
   {
