Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -57,6 +57,7 @@
     "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel \n",
     "  1. om nu Stockholms stad uppdaterar detta dataset med bättre koordinater\n",
     "     1. hur ser vi det? hur kan vi prenumerera på detta\n",
+    "       1. snyggaste mönstret är SPARQL federation se hur WIkidata jmf Nobelpristagare med vad Nobelstiftelsen har och ser avvikelser [länk](https://www.wikidata.org/wiki/User:Salgo60/ListeriaNobelData3) lesson learned är att Wikidata 99% av fallen vet bättre när personer avlider\n",
     "     1. om nu Open Street map / Wikidata förbättrar dessa koordinater hur får vi en \"dataroundtrip\" tillbaka till Stockholmsstad?"
    ]
   },
