--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -20,9 +20,29 @@
     "1. Ladda in i [Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE&t=6s)\n",
     "  1. Använder extrakt enligt nedan och sedan kopplar ihop det med Wikidata mha verktyget [Open Refine](https://openrefine.org/)\n",
     "1. Lägga till utegym platser i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
-    "  1. fundera över om olika övningsverktyg även markeras på kartan se [Tag:leisure=fitness station] och (https://wiki.openstreetmap.org/wiki/Tag:leisure=fitness%20station?uselang=en)\n",
+    "  1. fundera över om olika övningsverktyg även markeras på kartan \n",
+    "    1. se [Tag:leisure=fitness station](https://wiki.openstreetmap.org/wiki/Tag:leisure=fitness%20station?uselang=en)\n",
+    "    1. Outdoor_gym ?!?!\n",
     "  1. idag finns i Open Street Map 26 284 objekt markerade som \"fitness station\" se [karta](https://taginfo.openstreetmap.org/tags/?key=leisure&value=fitness_station#map)\n",
     "    1. Overpass Turbo fråga http://overpass-turbo.eu/s/UOk --> visar alla objekt med \"leisure=fitness_station\" \n",
+    "  1. mappa vad som finns i Öppna data till Open StreetMap taggar\n",
+    "    1. Belysning = [Key:lit](https://wiki.openstreetmap.org/wiki/Key:lit)\n",
+    "    1. Rullstolsanpassat = [Key:wheelchair](https://wiki.openstreetmap.org/wiki/Key:wheelchair)\n",
+    "    1. Sit ups = [fitness_station=sit-up](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
+    "    1. Armhav = [fitness_station=push-up](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
+    "    1. Rygglyft = [fitness_station=hyperextension](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
+    "    1. Parallella stangar = [fitness_station=parallel_bars](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
+    "    1. Armgang = [fitness_station=horizontal_ladder](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
+    "    1. Balansbom = ????\n",
+    "    1. Marklyft = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
+    "    1. Trappsteg = ?!?!?\n",
+    "    1. Ribbstolar = ?!?!?\n",
+    "    1. Benlyft = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
+    "    1. Rodd = ??\n",
+    "    1. Bankpress = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
+    "    1. Knaboj = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
+    "    1. Axelpress = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
+    "    1. saknas chins? eller är det armhäv = [fitness_station=horizontal_bar](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
     "1. Se om bilder från Stockholms stad är [CC-9](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No riughts reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
     "1. Använda verktyget [Tabernacle](https://tabernacle.toolforge.org/#/) för att ange namn på Stockholms utegym på flera språk ex. de vanligaste språken i Stockholms kommun \n",
     "  1. [Nationella minoriteter](https://start.stockholm/om-stockholms-stad/sa-arbetar-staden/nationella-minoriteter/) / [Wikipedia Minoritetsspråk i Sverige](https://sv.wikipedia.org/wiki/Minoritetsspr%C3%A5k_i_Sverige) --> språk  \n",
@@ -56,7 +76,8 @@
     " 1. tydlighet när saker går i produktion \n",
     " 1. du har en [publik backlog]((https://www.youtube.com/watch?v=502ILHjX9EE)) så du förstår prioriteringar och kan planera ditt eget arbete....\n",
     " 1. du kan följa ärendet(personer/projekt och svara/ ställa nya frågor ex. [user salgo60](https://phabricator.wikimedia.org/p/Salgo60/) - jag / [Lydia_Pintscher](https://phabricator.wikimedia.org/p/Lydia_Pintscher/) product manager WIkidata som sitter i Berlin / |projekt för editera WD från en klient - Wikidata-Bridge](https://phabricator.wikimedia.org/project/profile/4074/) / [Change feed Phabricator](https://phabricator.wikimedia.org/feed/query/all/) / [Change feed Wikidata](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
-    " 1. du kan pinga personer med en fråga / prenumerera på ändringar  \n",
+    " 1. du kan pinga personer med en fråga / prenumerera på ändringar \n",
+    "1. Skall Öppen data användas för utegym enkelt så behöver den publiceras per arbetsredskap se [Tag:leisure=fitness_station](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station)\n",
     "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel \n",
     "  1. om nu Stockholms stad uppdaterar detta dataset med bättre koordinater\n",
     "     1. hur ser vi det? hur kan vi prenumerera på detta\n",
