Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -82,7 +82,8 @@
     "  1. om nu Stockholms stad uppdaterar detta dataset med bättre koordinater\n",
     "     1. hur ser vi det? hur kan vi prenumerera på detta\n",
     "       1. snyggaste mönstret är SPARQL federation se hur WIkidata jmf Nobelpristagare med vad Nobelstiftelsen har och ser avvikelser [länk](https://www.wikidata.org/wiki/User:Salgo60/ListeriaNobelData3) lesson learned är att Wikidata 99% av fallen vet bättre när personer avlider\n",
-    "     1. om nu Open Street map / Wikidata förbättrar dessa koordinater hur får vi en \"dataroundtrip\" tillbaka till Stockholmsstad?"
+    "     1. om nu Open Street map / Wikidata förbättrar dessa koordinater hur får vi en \"dataroundtrip\" tillbaka till Stockholmsstad?\n",
+    "1. Ingen av utegymmen har \"Rullstolsanpassat\" angivet --> gissar Open Street Map [wheelchair=limited](https://wiki.openstreetmap.org/wiki/Key:wheelchair#wheelchair.3Dlimited) passarbäst"
    ]
   },
   {
@@ -309,6 +310,49 @@
     "print(\"_id\",\"|\",\"Kommun-KOD\",\"|\",\"Utegym-ID\",\"|\",\"Namn\",\"|\",\"Namn pa plats\",\"|\",\"Koordinat_Lat_(WGS84)\",\"|\",\"Koordinat_Long_(WGS84)\") \n",
     "for index, r in df.iterrows():\n",
     "    print(r[\"_id\"],\"|\",r[\"Kommun-KOD\"],\"|\",r[\"Utegym-ID\"],\"|\",r[\"Namn\"],\"|\",r[\"Namn pa plats\"],\"|\",r[\"Koordinat_Lat_(WGS84)\"],\"|\",r[\"Koordinat_Long_(WGS84)\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0     0180_Utegym_00001\n",
+       " 1     0180_Utegym_00002\n",
+       " 2     0180_Utegym_00003\n",
+       " 3     0180_Utegym_00004\n",
+       " 4     0180_Utegym_00005\n",
+       "             ...        \n",
+       " 59    0180_Utegym_00060\n",
+       " 60    0180_Utegym_00061\n",
+       " 61    0180_Utegym_00062\n",
+       " 62    0180_Utegym_00063\n",
+       " 63    0180_Utegym_00064\n",
+       " Name: Utegym-ID, Length: 64, dtype: object,\n",
+       " 0     None\n",
+       " 1     None\n",
+       " 2     None\n",
+       " 3     None\n",
+       " 4     None\n",
+       "       ... \n",
+       " 59    None\n",
+       " 60    None\n",
+       " 61    None\n",
+       " 62    None\n",
+       " 63    None\n",
+       " Name: Rullstolsanpassat, Length: 64, dtype: object)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Utegym-ID\"],df[\"Rullstolsanpassat\"]"
    ]
   },
   {
