Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -69,8 +69,8 @@
     "  1. Bättre vore att ha datum då den upphörde och ha versionshantering av datat jmf \n",
     "     1. Wikidata versioner av objektet för [Akalla Gårds utegym Q96105887](https://www.wikidata.org/w/index.php?title=Q96105887&action=history) \n",
     "     1. GITHUB versioner för denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/commits/7144289cde4b6e7d2e556746e2c8bb0e4882315a/Utegym%20Stockholm%20.ipynb)\n",
-    "1. Bilder refereras i ett dataset som är [CC-0 (Creative Commons CC Zero)](http://creativecommons.org/publicdomain/zero/1.0/) vad har bilderna för copyright? Öppen data borde försöka ha bilder med tydlig copyright --> fråga skickad på [twitter](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
-    "1. För att kunna referera ett dataset som källa behövs en tydlig identifierare. Idag känns datasettet ha en väldigt otydlig [persistent idengtifierare](https://en.wikipedia.org/wiki/Persistent_identifier) för datasettet är det [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) ? den borde finnas med under '''metadata''' \n",
+    "1. Bilder refereras i ett dataset som är [CC-0 (Creative Commons CC Zero)](http://creativecommons.org/publicdomain/zero/1.0/) vad har bilderna för copyright? Öppen data borde försöka ha bilder med tydlig copyright och gärna [\"No Rights Reserved\"](https://creativecommons.org/share-your-work/public-domain/cc0/) --> fråga skickad på [twitter](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
+    "1. För att kunna referera ett dataset som källa behövs en tydlig identifierare. Idag känns datasettet ha en väldigt otydlig [persistent identifierare](https://en.wikipedia.org/wiki/Persistent_identifier) för datasettet är det [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) ? den borde finnas med under '''metadata''' \n",
     "Bra dataset som skall användas måste vara enkla att kommunicera med och följa öppna frågor dvs. det är inte bara att ställa ut en kasse data och hoppas det blir bra \n",
     " 1. jmf [Wikidata har unika issuenummer](https://phabricator.wikimedia.org/tag/wikidata/) för alla frågor och\n",
     " 1. tydlighet när saker går i produktion \n",
@@ -83,7 +83,11 @@
     "     1. hur ser vi det? hur kan vi prenumerera på detta\n",
     "       1. snyggaste mönstret är SPARQL federation se hur WIkidata jmf Nobelpristagare med vad Nobelstiftelsen har och ser avvikelser [länk](https://www.wikidata.org/wiki/User:Salgo60/ListeriaNobelData3) lesson learned är att Wikidata 99% av fallen vet bättre när personer avlider\n",
     "     1. om nu Open Street map / Wikidata förbättrar dessa koordinater hur får vi en \"dataroundtrip\" tillbaka till Stockholmsstad?\n",
-    "1. Ingen av utegymmen har \"Rullstolsanpassat\" angivet --> gissar Open Street Map [wheelchair=limited](https://wiki.openstreetmap.org/wiki/Key:wheelchair#wheelchair.3Dlimited) passarbäst"
+    "1. Ingen av utegymmen har \"Rullstolsanpassat\" angivet --> gissar Open Street Map [wheelchair=limited](https://wiki.openstreetmap.org/wiki/Key:wheelchair#wheelchair.3Dlimited) passarbäst \n",
+    "1. Persistenta identifierare innebär att man kan peka på specifikt objekt. Om koordinaten för Akalla gymmet är fel hur pekar vi på denna post dvs. dataset \"cf2effb7-8e1e-41ab-90b4-d09fd383f0fd\" post \"0180_Utegym_00002\" fälten \"Koordinat_Lat_(WGS84)\" \"Koordinat_Long_(WGS84)\" skall helst vara maskinläsbart dvs. enkelt kan ett program förstå och helst ha en URL till platsen....\n",
+    "  1. jämför Wikidata fält och Wikidata version av \"samma\" objekt \n",
+    "    1. hoppar till fält koordinat = P625 https://www.wikidata.org/wiki/Q96105887?uselang=sv#P625 som har 2 värden där det ena markets \"fel\"\n",
+    "    2. ser ändringar mellan [version 1201371200 och 1201373921](https://www.wikidata.org/w/index.php?title=Q96105887&type=revision&diff=1201373921&oldid=1201371200) "
    ]
   },
   {
@@ -314,45 +318,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0     0180_Utegym_00001\n",
-       " 1     0180_Utegym_00002\n",
-       " 2     0180_Utegym_00003\n",
-       " 3     0180_Utegym_00004\n",
-       " 4     0180_Utegym_00005\n",
-       "             ...        \n",
-       " 59    0180_Utegym_00060\n",
-       " 60    0180_Utegym_00061\n",
-       " 61    0180_Utegym_00062\n",
-       " 62    0180_Utegym_00063\n",
-       " 63    0180_Utegym_00064\n",
-       " Name: Utegym-ID, Length: 64, dtype: object,\n",
-       " 0     None\n",
-       " 1     None\n",
-       " 2     None\n",
-       " 3     None\n",
-       " 4     None\n",
-       "       ... \n",
-       " 59    None\n",
-       " 60    None\n",
-       " 61    None\n",
-       " 62    None\n",
-       " 63    None\n",
-       " Name: Rullstolsanpassat, Length: 64, dtype: object)"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Skärholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Farsta stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Farsta stadsdelsförvaltning, Stockholms stad\n",
+      "Farsta stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Hägersten-Liljeholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Hässelby-Vällingby stadsdelsförvaltning, Stockholms stad\n",
+      "Hässelby-Vällingby stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Östermalms stadsdelsförvaltning; Stockholms stad\n",
+      "Södermalms stadsdelsförvaltning, Stockholms stad\n",
+      "Kungsholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Farsta stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Hässelby-Vällingby stadsdelsförvaltning, Stockholms stad\n",
+      "Stadsmiljö och parkfrågor i Bromma, Stockholms stad\n",
+      "Kungsholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Kungsholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Kämpetorpshallarn, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Östermalms stadsdelsförvaltning; Stockholms stad\n",
+      "Hägersten-Liljeholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Hägersten-Liljeholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Skärholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Skarpnäcks stadsdelsförvaltning\n",
+      "Hässelby-Vällingby stadsdelsförvaltning, Stockholms stad\n",
+      "Farsta stadsdelsförvaltning, Stockholms stad\n",
+      "Hässelby-Vällingby stadsdelsförvaltning, Stockholms stad\n",
+      "Kungsholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Hägersten-Liljeholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Skärholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Kungsholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Älvsjö stadsdelsförvaltning, Stockholms stad\n",
+      "Hägersten-Liljeholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Älvsjö stadsdelsförvaltning, Stockholms stad\n",
+      "Stadsmiljö och parkfrågor i Bromma, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Spånga-Tensta stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Hässelby-Vällingby stadsdelsförvaltning, Stockholms stad\n",
+      "Skärholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Skärholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Skärholmens stadsdelsförvaltning, Stockholms stad\n",
+      "Södermalms stadsdelsförvaltning, Stockholms stad\n",
+      "Östermalms stadsdelsförvaltning; Stockholms stad\n",
+      "Norrmalms stadsdelsförvaltning, Stockholms stad\n",
+      "Norrmalms stadsdelsförvaltning, Stockholms stad\n",
+      "Älvsjö stadsdelsförvaltning, Stockholms stad\n",
+      "Rinkeby-Kista stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n",
+      "Enskede-Årsta-Vantörs stadsdelsförvaltning, Stockholms stad\n",
+      "Enskede-Årsta-Vantörs stadsdelsförvaltning, Stockholms stad\n",
+      "Idrottsförvaltningen, Stockholms stad\n"
+     ]
     }
    ],
    "source": [
-    "df[\"Utegym-ID\"],df[\"Rullstolsanpassat\"]"
+    "for index, r in df.iterrows():\n",
+    "    print(r[\"Namn pa agare\"])"
    ]
   },
   {
