Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -19,6 +19,7 @@
     "### TODO\n",
     "1. Ladda in i [Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE&t=6s)\n",
     "  1. Använder extrakt enligt nedan och sedan kopplar ihop det med Wikidata mha verktyget [Open Refine](https://openrefine.org/)\n",
+    "  1. Koppla bilder som finns till Wikidata objekten se [Category:Outdoor_gyms_in_Sweden](https://commons.wikimedia.org/wiki/Category:Outdoor_gyms_in_Sweden)\n",
     "1. Lägga till utegym platser i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
     "  1. fundera över om olika övningsverktyg även markeras på kartan \n",
     "    1. se [Tag:leisure=fitness station](https://wiki.openstreetmap.org/wiki/Tag:leisure=fitness%20station?uselang=en)\n",
