Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -23,7 +23,7 @@
     "1. Lägga till utegym platser i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
     "  1. fundera över om olika övningsverktyg även markeras på kartan \n",
     "    1. se [Tag:leisure=fitness station](https://wiki.openstreetmap.org/wiki/Tag:leisure=fitness%20station?uselang=en)\n",
-    "    1. Outdoor_gym ?!?!\n",
+    "    1. [Outdoor gym how to tag them](https://help.openstreetmap.org/questions/38259/outdoor-gym-how-to-tag-it?sort=votes)\n",
     "  1. idag finns i Open Street Map 26 284 objekt markerade som \"fitness station\" se [karta](https://taginfo.openstreetmap.org/tags/?key=leisure&value=fitness_station#map)\n",
     "    1. Overpass Turbo fråga http://overpass-turbo.eu/s/UOk --> visar alla objekt med \"leisure=fitness_station\" \n",
     "  1. mappa vad som finns i Öppna data till Open StreetMap taggar\n",
