--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -8,8 +8,9 @@
     "* Denna [GITHUB sida](https://github.com/salgo60/open-data-examples/blob/master/Utegym%20Stockholm%20.ipynb) \n",
     "* ÖDIS [Utegym Stockholm](https://smartstad.stockholm/2020/05/08/projekt-odis-efterfragar-oppna-data-om-utegym/) \n",
     "* Utegym i Stockholms stad dataset [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd)\n",
-    "* Blog [Utegrym övningar](http://minancestry.blogspot.com/2020/06/utetraning.html)\n",
-    "* Wikidata stödjer [300 språk](https://www.wikidata.org/wiki/Help:Wikimedia_language_codes/lists/all) --> vi kan ha namn på utegymmen på de vanligaste språken i Sverige: Arabiska, Somaliska, Engelska, Finska, Sydsamiska, Lulesamiska...."
+    "* Blog [Utegym övningar](http://minancestry.blogspot.com/2020/06/utetraning.html)\n",
+    "* Wikidata stödjer [300 språk](https://www.wikidata.org/wiki/Help:Wikimedia_language_codes/lists/all) --> vi kan ha namn på utegymmen på de vanligaste språken i Sverige: Arabiska, Somaliska, Engelska, Finska, Sydsamiska, Lulesamiska....\n",
+    "* Open Street map [Sv:Tag:leisure=fitness_station](https://wiki.openstreetmap.org/wiki/Sv:Tag:leisure%3Dfitness_station#Exempel)"
    ]
   },
   {
