Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -20,7 +20,7 @@
     "### TODO\n",
     "1. Ladda in i [Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE&t=6s)\n",
     "  1. Använder extrakt enligt nedan och sedan kopplar ihop det med Wikidata mha verktyget [Open Refine](https://openrefine.org/)\n",
-    "    1. exempel Wikidata [Q96105887](https://www.wikidata.org/wiki/Q96105887?uselang=sv) samma som Open Street Map [way/813642780](https://www.openstreetmap.org/way/813642780) som har olika stationer ex [way/813660758](https://www.openstreetmap.org/way/813660758) / [way/813660760](https://www.openstreetmap.org/way/813660760) \n",
+    "    1. exempel Wikidata [Q96105887](https://www.wikidata.org/wiki/Q96105887?uselang=sv) samma som Open Street Map [way/813642780](https://www.openstreetmap.org/way/813642780) som har olika stationer ex [way/813660758](https://www.openstreetmap.org/way/813660758) / [way/813660760](https://www.openstreetmap.org/way/813660760) samma som [commons.wikimedia.org Category:Akalla_Gårds_utegym](https://commons.wikimedia.org/wiki/Category:Akalla_G%C3%A5rds_utegym)\n",
     "  1. Koppla bilder som finns till Wikidata objekten se [Category:Outdoor_gyms_in_Sweden](https://commons.wikimedia.org/wiki/Category:Outdoor_gyms_in_Sweden)\n",
     "1. Lägga till utegym platser i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
     "  1. fundera över om olika övningsverktyg även markeras på kartan \n",
@@ -30,6 +30,7 @@
     "    1. Overpass Turbo fråga http://overpass-turbo.eu/s/UOk --> visar alla objekt med \"leisure=fitness_station\" \n",
     "  1. mappa vad som finns i Öppna data till Open StreetMap taggar\n",
     "    1. Belysning = [Key:lit](https://wiki.openstreetmap.org/wiki/Key:lit)\n",
+    "    1. [fee=no](https://wiki.openstreetmap.org/wiki/Key:fee)\n",
     "    1. Rullstolsanpassat = [Key:wheelchair](https://wiki.openstreetmap.org/wiki/Key:wheelchair)\n",
     "    1. Sit ups = [fitness_station=sit-up](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
     "    1. Armhav = [fitness_station=push-up](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
@@ -77,8 +78,8 @@
     "Bra dataset som skall användas måste vara enkla att kommunicera med och följa öppna frågor dvs. det är inte bara att ställa ut en kasse data och hoppas det blir bra \n",
     " 1. jmf [Wikidata har unika issuenummer](https://phabricator.wikimedia.org/tag/wikidata/) för alla frågor och\n",
     " 1. tydlighet när saker går i produktion \n",
-    " 1. du har en [publik backlog]((https://www.youtube.com/watch?v=502ILHjX9EE)) så du förstår prioriteringar och kan planera ditt eget arbete....\n",
-    " 1. du kan följa ärendet(personer/projekt och svara/ ställa nya frågor ex. [user salgo60](https://phabricator.wikimedia.org/p/Salgo60/) - jag / [Lydia_Pintscher](https://phabricator.wikimedia.org/p/Lydia_Pintscher/) product manager WIkidata som sitter i Berlin / |projekt för editera WD från en klient - Wikidata-Bridge](https://phabricator.wikimedia.org/project/profile/4074/) / [Change feed Phabricator](https://phabricator.wikimedia.org/feed/query/all/) / [Change feed Wikidata](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
+    " 1. du har en [publik backlog](https://www.youtube.com/watch?v=502ILHjX9EE) så du förstår prioriteringar och kan planera ditt eget arbete....\n",
+    " 1. du kan följa ärendet(personer/projekt och svara/ ställa nya frågor ex. [user salgo60](https://phabricator.wikimedia.org/p/Salgo60/) - jag / [Lydia_Pintscher](https://phabricator.wikimedia.org/p/Lydia_Pintscher/) product manager Wikidata som sitter i Berlin / projekt för editera WD från en klient - [Wikidata-Bridge](https://phabricator.wikimedia.org/project/profile/4074/) / [Change feed Phabricator](https://phabricator.wikimedia.org/feed/query/all/) / [Change feed Wikidata](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
     " 1. du kan pinga personer med en fråga / prenumerera på ändringar \n",
     "1. Skall Öppen data användas för utegym enkelt så behöver den publiceras per arbetsredskap se [Tag:leisure=fitness_station](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station)\n",
     "1. Kvaliten på angivna koordinater i datasettet känns tveksam om den duger till kartor ex. Akalla Gårds bollplan har hos Stockholms stad WGS84 [59.412051 17.915596](https://www.google.com/maps/dir/59.411884,+17.914643/59.4120556,17.9156111/@59.4119299,17.914238,98m/data=!3m1!1e3!4m7!4m6!1m3!2m2!1d17.914643!2d59.411884!1m0!3e2) är 80 meter fel \n",
@@ -90,7 +91,8 @@
     "1. Persistenta identifierare innebär att man kan peka på specifikt objekt. Om koordinaten för Akalla gymmet är fel hur pekar vi på denna post dvs. dataset \"cf2effb7-8e1e-41ab-90b4-d09fd383f0fd\" post \"0180_Utegym_00002\" fälten \"Koordinat_Lat_(WGS84)\" \"Koordinat_Long_(WGS84)\" skall helst vara maskinläsbart dvs. enkelt kan ett program förstå och helst ha en URL till platsen....\n",
     "  1. jämför Wikidata fält och Wikidata version av \"samma\" objekt \n",
     "    1. hoppar till fält koordinat = P625 https://www.wikidata.org/wiki/Q96105887?uselang=sv#P625 som har 2 värden där det ena markets \"fel\"\n",
-    "    2. ser ändringar mellan [version 1201371200 och 1201373921](https://www.wikidata.org/w/index.php?title=Q96105887&type=revision&diff=1201373921&oldid=1201371200) "
+    "    2. ser ändringar mellan [version 1201371200 och 1201373921](https://www.wikidata.org/w/index.php?title=Q96105887&type=revision&diff=1201373921&oldid=1201371200) \n",
+    "1. \"Senast uppdaterad 20 maj 2020\" anges på [storsthlm.dataplatform.se cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) men vad har ändrats?!?!? se ovan om versionshistorik "
    ]
   },
   {
