Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -403,6 +403,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wikidata\n",
+    "frågar Wikidata utegum Stockholms stad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Akalla Gårds utegym http://www.wikidata.org/entity/Q96105887 https://motionera.stockholm/hitta-utegym/utegym/akalla-gards-utegym/\n",
+      "\n",
+      " Mälarhöjdsbadets utegym http://www.wikidata.org/entity/Q96141413 https://motionera.stockholm/hitta-utegym/utegym/malarhojdsbadets-utegym/\n",
+      "\n",
+      " Skärholmens utegym http://www.wikidata.org/entity/Q96141423 https://motionera.stockholm/hitta-utegym/utegym/skarholmens-utegym/\n",
+      "\n",
+      " Sätrastrandsbadets utegym http://www.wikidata.org/entity/Q96141434 https://motionera.stockholm/hitta-utegym/utegym/satrastrandsbadet-utegym/\n",
+      "\n",
+      " Ärvinge utegym http://www.wikidata.org/entity/Q96142446 https://motionera.stockholm/hitta-utegym/utegym/arvinge-utegym/\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pip install sparqlwrapper\n",
+    "# https://rdflib.github.io/sparqlwrapper/\n",
+    "\n",
+    "import sys\n",
+    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
+    "\n",
+    "endpoint_url = \"https://query.wikidata.org/sparql\"\n",
+    "\n",
+    "query = \"\"\"SELECT ?item ?label ?_image ?www ?inv WHERE {\n",
+    "  ?item wdt:P31 wd:Q692630.\n",
+    "  ?item wdt:P131 wd:Q506250.\n",
+    "  OPTIONAL {?item wdt:P856 ?www}\n",
+    "  OPTIONAL {?item wdt:P217 ?inv}\n",
+    "  SERVICE wikibase:label {\n",
+    "    bd:serviceParam wikibase:language \"sv\" . \n",
+    "    ?item rdfs:label ?label\n",
+    "  }\n",
+    "  \n",
+    "OPTIONAL { ?item wdt:P18 ?_image. }\n",
+    "} order by  ?label\n",
+    "LIMIT 100\"\"\"\n",
+    "\n",
+    "\n",
+    "def get_results(endpoint_url, query):\n",
+    "    user_agent = \"User salgo60 Jupyter/%s.%s\" % (sys.version_info[0], sys.version_info[1])\n",
+    "    sparql = SPARQLWrapper(endpoint_url, agent=user_agent)\n",
+    "    sparql.setQuery(query)\n",
+    "    sparql.setReturnFormat(JSON)\n",
+    "    return sparql.query().convert()\n",
+    "\n",
+    "\n",
+    "results = get_results(endpoint_url, query)\n",
+    "\n",
+    "for result in results[\"results\"][\"bindings\"]:\n",
+    "    #print(result) \n",
+    "    #print(\"\\n\",result[\"inv\"][\"value\"],result[\"label\"][\"value\"],result[\"item\"][\"value\"],result[\"www\"][\"value\"])\n",
+    "    print(\"\\n\",result[\"label\"][\"value\"],result[\"item\"][\"value\"],result[\"www\"][\"value\"])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
