--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -473,6 +473,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open Street Map\n",
+    "hämta utegym Open Street Map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
