Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -47,7 +47,7 @@
     "    1. Knaboj = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
     "    1. Axelpress = [fitness_station=log_lifting](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment) ?\n",
     "    1. saknas chins? eller är det armhäv = [fitness_station=horizontal_bar](https://wiki.openstreetmap.org/wiki/Tag:leisure%3Dfitness_station#Fitness_equipment)\n",
-    "1. Se om bilder från Stockholms stad är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No riughts reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
+    "1. Se om bilder från Stockholms stad är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No rights reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
     "1. Använda verktyget [Tabernacle](https://tabernacle.toolforge.org/#/) för att ange namn på Stockholms utegym på flera språk ex. de vanligaste språken i Stockholms kommun \n",
     "  1. [Nationella minoriteter](https://start.stockholm/om-stockholms-stad/sa-arbetar-staden/nationella-minoriteter/) / [Wikipedia Minoritetsspråk i Sverige](https://sv.wikipedia.org/wiki/Minoritetsspr%C3%A5k_i_Sverige) --> språk  \n",
     "     1. jiddisch --> språkkod [yi](https://sv.wikipedia.org/wiki/Jiddisch)  \n",
@@ -407,7 +407,7 @@
    "metadata": {},
    "source": [
     "## Wikidata\n",
-    "frågar Wikidata utegum Stockholms stad"
+    "frågar Wikidata utegym Stockholms stad"
    ]
   },
   {
