Riksantikvarieämbetet RAÄ - kulturarvsdata

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -420,15 +420,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " Akalla Gårds utegym http://www.wikidata.org/entity/Q96105887 https://motionera.stockholm/hitta-utegym/utegym/akalla-gards-utegym/\n",
+      " 0180_Utegym_00001 Akalla Gårds utegym http://www.wikidata.org/entity/Q96105887 https://motionera.stockholm/hitta-utegym/utegym/akalla-gards-utegym/\n",
       "\n",
-      " Mälarhöjdsbadets utegym http://www.wikidata.org/entity/Q96141413 https://motionera.stockholm/hitta-utegym/utegym/malarhojdsbadets-utegym/\n",
+      " 0180_Utegym_00032 Mälarhöjdsbadets utegym http://www.wikidata.org/entity/Q96141413 https://motionera.stockholm/hitta-utegym/utegym/malarhojdsbadets-utegym/\n",
       "\n",
-      " Skärholmens utegym http://www.wikidata.org/entity/Q96141423 https://motionera.stockholm/hitta-utegym/utegym/skarholmens-utegym/\n",
+      " 0180_Utegym_00041 Skärholmens utegym http://www.wikidata.org/entity/Q96141423 https://motionera.stockholm/hitta-utegym/utegym/skarholmens-utegym/\n",
       "\n",
-      " Sätrastrandsbadets utegym http://www.wikidata.org/entity/Q96141434 https://motionera.stockholm/hitta-utegym/utegym/satrastrandsbadet-utegym/\n",
+      " 0180_Utegym_00052 Sätrastrandsbadets utegym http://www.wikidata.org/entity/Q96141434 https://motionera.stockholm/hitta-utegym/utegym/satrastrandsbadet-utegym/\n",
       "\n",
-      " Ärvinge utegym http://www.wikidata.org/entity/Q96142446 https://motionera.stockholm/hitta-utegym/utegym/arvinge-utegym/\n"
+      " 0180_Utegym_00060 Ärvinge utegym http://www.wikidata.org/entity/Q96142446 https://motionera.stockholm/hitta-utegym/utegym/arvinge-utegym/\n"
      ]
     }
    ],
@@ -468,8 +468,8 @@
     "\n",
     "for result in results[\"results\"][\"bindings\"]:\n",
     "    #print(result) \n",
-    "    #print(\"\\n\",result[\"inv\"][\"value\"],result[\"label\"][\"value\"],result[\"item\"][\"value\"],result[\"www\"][\"value\"])\n",
-    "    print(\"\\n\",result[\"label\"][\"value\"],result[\"item\"][\"value\"],result[\"www\"][\"value\"])\n"
+    "    print(\"\\n\",result[\"inv\"][\"value\"],result[\"label\"][\"value\"],result[\"item\"][\"value\"],result[\"www\"][\"value\"])\n",
+    "    #print(\"\\n\",result[\"label\"][\"value\"],result[\"item\"][\"value\"],result[\"www\"][\"value\"])\n"
    ]
   },
   {
