Update Riksantikvarieämbetet RAÄ UGC.ipynb

--- a/Riksantikvarieämbetet RAÄ UGC.ipynb
+++ b/Riksantikvarieämbetet RAÄ UGC.ipynb
@@ -760,6 +760,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-02-02         2\n",
+       "2012-02-03         2\n",
+       "2012-02-07         1\n",
+       "2012-02-08         1\n",
+       "2012-02-09         1\n",
+       "               ...  \n",
+       "2020-05-14         1\n",
+       "2020-06-02        15\n",
+       "2020-06-03      2773\n",
+       "2020-06-04      2708\n",
+       "2020-06-17    145279\n",
+       "Name: createDate, Length: 502, dtype: int64"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# UGC äldsta värde är 2012-02-02 och mer än hälften av posterna skapades under en dag 2020-06-17 igår...\n",
+    "dftot[\"createDate\"].value_counts().sort_index()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
