Update Riksantikvarieämbetet RAÄ UGC.ipynb

--- a/Riksantikvarieämbetet RAÄ UGC.ipynb
+++ b/Riksantikvarieämbetet RAÄ UGC.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -781,13 +781,14 @@
        "Name: createDate, Length: 502, dtype: int64"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# UGC äldsta värde är 2012-02-02 och mer än hälften av posterna skapades under en dag 2020-06-17 igår...\n",
+    "# UGC äldsta värde är 2012-02-02 (samma år som WD skapades) och \n",
+    "# mer än hälften av posterna skapades under en dag 2020-06-17 igår...?!?!?\n",
     "dftot[\"createDate\"].value_counts().sort_index()"
    ]
   },
