--- a/Riksantikvarieämbetet RAÄ UGC.ipynb
+++ b/Riksantikvarieämbetet RAÄ UGC.ipynb
@@ -2678,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2697,7 +2697,7 @@
        "Name: relatedUri, dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2711,16 +2711,24 @@
    "metadata": {},
    "source": [
     "Still using the old system not LIBRISXL and LIBRISXL seems not link back RAÄ....\n",
-    "* http://libris.kb.se/bib/2839747 korrekt is   \n",
+    "* http://libris.kb.se/bib/2839747 correct is   \n",
     "  * https://libris.kb.se/katalogisering/wd6wddh75pcpmxv ==> \n",
     "    * https://libris.kb.se/wd6wddh75pcpmxv/data.jsonld "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of books linking:  676\n"
+     ]
+    }
+   ],
    "source": [
     "# get number of  libris items we reference  \n",
     "libris = set() \n",
@@ -2729,13 +2737,13 @@
     "    librisref = row['relatedUri'].split(\".se/\")[1].split(\"bib/\")[1]\n",
     "    libris.add(librisref)\n",
     "    url = librisurl + librisref \n",
-    "    # Looks like we get status 500 internal error\n",
-    "    try: \n",
-    "        print (url,librisref)\n",
-    "        r = http.request('GET', url) \n",
-    "        print(r.headers) \n",
-    "    except : \n",
-    "        print (\"\\tError\")\n",
+    "    # Looks like we get status 500 internal error from LIBRIS\n",
+    "    #try: \n",
+    "        #print (url,librisref)\n",
+    "        #r = http.request('GET', url) \n",
+    "        #print(r.headers) \n",
+    "    #except : \n",
+    "        #print (\"\\tError\")\n",
     "\n",
     "\n",
     "print (\"Number of books linking: \",len(libris))\n",
